# kill-your-selfie

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_debug.py  settings.yaml
kill_your_selfie/: __init__.py  app.py  auth.py  config.py  database.py  models.py  notifications.py  occurences.py  occurrences.py  stats.py  util.py
kill_your_selfie/static/scripts/: bar-graphs.js  bs_form_validation.js  graphs.js  line-graphs.js  map_location.js  weekly-bar-graph.js
kill_your_selfie/static/styles/: base.css  colors.css  index.css  nav.css
kill_your_selfie/templates/: base.html  brand.html  form.html  index.html  location_link.html  login.html  map_location.html  navbar.html  new_occurence.html  new_occurrence.html  new_record.html  new_user.html  register.html  skeleton.html  user_settings.html
