[tool.poetry]
name = "kill-your-selfie"
version = "0.1.0"
description = "statistics about lily telling people/herself to kill themselves"
authors = ["Your Name <you@example.com>"]
license = "GNU AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
blinker = "1.9.0"
click = "8.1.7"
colorama = "0.4.6"
Flask = "3.1.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
MarkupSafe = "3.0.2"
Werkzeug = "3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
