[tool.poetry]
name = "kill-your-selfie"
version = "0.1.0"
description = "statistics about lily telling people/herself to kill themselves"
authors = ["Thegamefire <Thegamefire@outlook.com>", "lolcatjpg <66800621+lolcatjpg@users.noreply.github.com>"]
license = "GNU AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
blinker = "1.9.0"
click = "8.1.7"
colorama = "0.4.6"
Flask = "3.1.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
MarkupSafe = "3.0.2"
Werkzeug = "3.1.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
